--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
 <script src=""></script>
 <body>
 
-<img src="ireland-portrait.jpg" alt="LA" style="width:100%">
+<img src="/assets/ireland-portrait.jpg" alt="LA" style="width:100%">
 
 <h1>Toby Berner</h1>
 <p>I am a Master's student at the University of Pennsylvania School of Engineering and Applied Science, where I am pursuing 
