--- a/index.html
+++ b/index.html
@@ -1,24 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <meta charset="UTF-8">
 <title>Toby Berner</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
 <style>
-html,body {font-family:"Verdana",sans-serif}
-h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
+    body {
+        font-family: "Verdana", sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+
+    /* Full-screen landing section */
+    .landing {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh; /* takes full screen height */
+        background-color: #f5f5f5;
+        padding: 40px;
+        box-sizing: border-box;
+    }
+
+    /* Left text container */
+    .landing-text {
+        flex: 1;
+        max-width: 600px;
+    }
+    .landing-text h1 {
+        font-size: 3rem;
+        margin-bottom: 20px;
+        font-family: "Segoe UI", sans-serif;
+    }
+    .landing-text p {
+        font-size: 1.2rem;
+        line-height: 1.6;
+    }
+
+    /* Right image container */
+    .landing-image {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .landing-image img {
+        max-width: 300px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
+    }
+
+    /* Make it stack vertically on small screens */
+    @media (max-width: 768px) {
+        .landing {
+            flex-direction: column;
+            text-align: center;
+        }
+        .landing-text {
+            margin-bottom: 20px;
+        }
+    }
 </style>
-<script src=""></script>
+</head>
 <body>
 
-<img src="/assets/ireland-portrait.jpg" alt="LA" style="width:100%">
+<!-- Landing section -->
+<section class="landing">
+    <div class="landing-text">
+        <h1>Hi, my name is Toby Berner</h1>
+        <p>I’m a Master’s student at the University of Pennsylvania School of Engineering and Applied Science, pursuing mechanical engineering. I recently graduated from Haverford College with a bachelor’s degree in physics and a minor in fine arts.</p>
+    </div>
+    <div class="landing-image">
+        <img src="/assets/ireland-portrait.jpg" alt="Portrait of Toby Berner">
+    </div>
+</section>
 
-<h1>Toby Berner</h1>
-<p>I am a Master's student at the University of Pennsylvania School of Engineering and Applied Science, where I am pursuing 
-a master's degree in mechanical engineering. I recently graduated from Haverford College in spring of 2025 with a bachelor's 
-degree in physics and a minor in fine arts.</p>
-<p>I am actively looking for full-time mechanical engineering positions following my graduation from the University of Pennsylvania
-in spring of 2026.</p>
+<!-- Rest of your site -->
+<section style="padding: 40px;">
+    <h2>About Me</h2>
+    <p>I am actively looking for full-time mechanical engineering positions following my graduation from the University of Pennsylvania in spring of 2026.</p>
+</section>
 
 </body>
 </html>
