--- a/index.html
+++ b/index.html
@@ -9,40 +9,72 @@
         font-family: "Verdana", sans-serif;
         margin: 0;
         padding: 0;
+        scroll-behavior: smooth; /* smooth scrolling */
     }
 
-    /* Full-screen landing section */
+    /* Navbar */
+    nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: white;
+        border-bottom: 1px solid #ccc;
+        padding: 10px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 1000;
+    }
+    nav .nav-left {
+        font-weight: bold;
+        font-size: 1.2rem;
+    }
+    nav .nav-links a {
+        margin-left: 20px;
+        text-decoration: none;
+        color: black;
+        font-weight: normal;
+    }
+    nav .nav-links a:hover {
+        text-decoration: underline;
+    }
+
+    /* Landing section */
     .landing {
         display: flex;
         align-items: center;
         justify-content: center;
-        min-height: 100vh; /* takes full screen height */
+        min-height: 100vh;
         background-color: #f5f5f5;
         padding: 40px;
         box-sizing: border-box;
     }
-
-    /* Left text container */
     .landing-text {
         flex: 1;
         max-width: 600px;
+        opacity: 0;
+        animation: fadeIn 1.5s ease forwards;
+    }
+    .landing-text p {
+        font-size: 1.5rem;
+        margin: 0;
     }
     .landing-text h1 {
         font-size: 3rem;
-        margin-bottom: 20px;
+        margin-top: 10px;
         font-family: "Segoe UI", sans-serif;
+        font-weight: bold;
     }
-    .landing-text p {
-        font-size: 1.2rem;
-        line-height: 1.6;
-    }
-
-    /* Right image container */
     .landing-image {
         flex: 1;
         display: flex;
         justify-content: center;
         align-items: center;
+        transform: translateX(50px);
+        opacity: 0;
+        animation: slideIn 1.5s ease forwards;
+        animation-delay: 0.5s;
     }
     .landing-image img {
         max-width: 300px;
@@ -50,7 +82,34 @@
         box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
     }
 
-    /* Make it stack vertically on small screens */
+    /* Sections */
+    section {
+        padding: 80px 20px;
+        max-width: 900px;
+        margin: auto;
+    }
+    h2 {
+        font-family: "Segoe UI", sans-serif;
+    }
+
+    /* Contact section */
+    .contact-info p {
+        margin: 5px 0;
+        font-size: 1.1rem;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+        to { opacity: 1; }
+    }
+    @keyframes slideIn {
+        to {
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+
+    /* Mobile responsiveness */
     @media (max-width: 768px) {
         .landing {
             flex-direction: column;
@@ -64,21 +123,41 @@
 </head>
 <body>
 
-<!-- Landing section -->
-<section class="landing">
+<!-- Navbar -->
+<nav>
+    <div class="nav-left"><a href="#top" style="text-decoration:none; color:black;">Toby Berner</a></div>
+    <div class="nav-links">
+        <a href="portfolio.html">Portfolio</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </div>
+</nav>
+
+<!-- Landing Section -->
+<section id="top" class="landing">
     <div class="landing-text">
-        <h1>Hi, my name is Toby Berner</h1>
-        <p>I’m a Master’s student at the University of Pennsylvania School of Engineering and Applied Science, pursuing mechanical engineering. I recently graduated from Haverford College with a bachelor’s degree in physics and a minor in fine arts.</p>
+        <p>Hi, my name is</p>
+        <h1>Toby Berner</h1>
     </div>
     <div class="landing-image">
         <img src="/assets/ireland-portrait.jpg" alt="Portrait of Toby Berner">
     </div>
 </section>
 
-<!-- Rest of your site -->
-<section style="padding: 40px;">
+<!-- About Section -->
+<section id="about">
     <h2>About Me</h2>
-    <p>I am actively looking for full-time mechanical engineering positions following my graduation from the University of Pennsylvania in spring of 2026.</p>
+    <p>I’m a Master’s student at the University of Pennsylvania School of Engineering and Applied Science, pursuing mechanical engineering. I recently graduated from Haverford College with a bachelor’s degree in physics and a minor in fine arts. I am actively seeking full-time mechanical engineering positions following my graduation in spring 2026.</p>
+</section>
+
+<!-- Contact Section -->
+<section id="contact">
+    <h2>Contact</h2>
+    <div class="contact-info">
+        <p>Email: toby.berner@example.com</p>
+        <p>Phone: (123) 456-7890</p>
+        <p>Location: Boston, MA</p>
+    </div>
 </section>
 
 </body>
