--- a/index.html
+++ b/index.html
@@ -5,36 +5,56 @@
 <title>Toby Berner</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-    body {
-        font-family: "Verdana", sans-serif;
-        margin: 0;
-        padding: 0;
-        scroll-behavior: smooth; /* smooth scrolling */
+    :root {
+        --dark-green: #004225; /* Aston Martin dark green */
+        --light-green: #cfe5d2; /* Complementary lighter green */
+        --transition-speed: 0.3s;
     }
 
-    /* Navbar */
+    body {
+        margin: 0;
+        padding: 0;
+        scroll-behavior: smooth;
+        font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    }
+
+    /* Navbar (shared style) */
     nav {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        background-color: white;
-        border-bottom: 1px solid #ccc;
-        padding: 10px 20px;
+        padding: 10px 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        transition: background-color var(--transition-speed) ease, box-shadow var(--transition-speed) ease;
         z-index: 1000;
+        background-color: transparent;
     }
-    nav .nav-left {
+    nav.scrolled {
+        background-color: white;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    nav .nav-left a {
+        text-decoration: none;
         font-weight: bold;
         font-size: 1.2rem;
+        color: white;
+        transition: color var(--transition-speed);
+    }
+    nav.scrolled .nav-left a {
+        color: black;
     }
     nav .nav-links a {
-        margin-left: 20px;
+        margin-left: 15px;
         text-decoration: none;
-        color: black;
+        color: white;
         font-weight: normal;
+        transition: color var(--transition-speed);
+    }
+    nav.scrolled .nav-links a {
+        color: black;
     }
     nav .nav-links a:hover {
         text-decoration: underline;
@@ -46,9 +66,10 @@
         align-items: center;
         justify-content: center;
         min-height: 100vh;
-        background-color: #f5f5f5;
+        background-color: var(--dark-green);
         padding: 40px;
         box-sizing: border-box;
+        color: white;
     }
     .landing-text {
         flex: 1;
@@ -59,12 +80,13 @@
     .landing-text p {
         font-size: 1.5rem;
         margin: 0;
+        font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
     }
     .landing-text h1 {
-        font-size: 3rem;
+        font-size: 3.5rem;
         margin-top: 10px;
-        font-family: "Segoe UI", sans-serif;
-        font-weight: bold;
+        font-family: "Palatino", "Palatino Linotype", "Book Antiqua", serif;
+        font-weight: 900;
     }
     .landing-image {
         flex: 1;
@@ -79,7 +101,7 @@
     .landing-image img {
         max-width: 300px;
         border-radius: 10px;
-        box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
+        box-shadow: 0px 4px 15px rgba(0,0,0,0.4);
     }
 
     /* Sections */
@@ -88,8 +110,11 @@
         max-width: 900px;
         margin: auto;
     }
+    #about, #contact {
+        background-color: var(--light-green);
+    }
     h2 {
-        font-family: "Segoe UI", sans-serif;
+        font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
     }
 
     /* Contact section */
@@ -124,8 +149,8 @@
 <body>
 
 <!-- Navbar -->
-<nav>
-    <div class="nav-left"><a href="#top" style="text-decoration:none; color:black;">Toby Berner</a></div>
+<nav id="navbar">
+    <div class="nav-left"><a href="#top">Toby Berner</a></div>
     <div class="nav-links">
         <a href="portfolio.html">Portfolio</a>
         <a href="#about">About</a>
@@ -159,6 +184,18 @@
         <p>Location: Boston, MA</p>
     </div>
 </section>
+
+<script>
+    // Navbar scroll effect
+    window.addEventListener('scroll', function() {
+        const navbar = document.getElementById('navbar');
+        if (window.scrollY > 50) {
+            navbar.classList.add('scrolled');
+        } else {
+            navbar.classList.remove('scrolled');
+        }
+    });
+</script>
 
 </body>
 </html>
