--- a/index.html
+++ b/index.html
@@ -5,151 +5,156 @@
 <title>Toby Berner</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-    :root {
-        --dark-green: #004225; /* Aston Martin dark green */
-        --light-green: #cfe5d2; /* Complementary lighter green */
-        --transition-speed: 0.3s;
-    }
+:root {
+    --dark-green: #013220; /* Dark Aston Martin green */
+    --light-green: #cfe5d2; /* Complementary lighter green */
+    --transition-speed: 0.3s;
+}
 
-    body {
-        margin: 0;
-        padding: 0;
-        scroll-behavior: smooth;
-        font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-    }
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    scroll-behavior: smooth;
+    background-color: var(--dark-green);
+    color: var(--light-green);
+    opacity: 0; 
+    animation: fadeInBody 0.7s forwards;
+}
 
-    /* Navbar (shared style) */
-    nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding: 10px 30px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        transition: background-color var(--transition-speed) ease, box-shadow var(--transition-speed) ease;
-        z-index: 1000;
-        background-color: transparent;
-    }
-    nav.scrolled {
-        background-color: white;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-    nav .nav-left a {
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 1.2rem;
-        color: white;
-        transition: color var(--transition-speed);
-    }
-    nav.scrolled .nav-left a {
-        color: black;
-    }
-    nav .nav-links a {
-        margin-left: 15px;
-        text-decoration: none;
-        color: white;
-        font-weight: normal;
-        transition: color var(--transition-speed);
-    }
-    nav.scrolled .nav-links a {
-        color: black;
-    }
-    nav .nav-links a:hover {
-        text-decoration: underline;
-    }
+/* Fade-in animation */
+@keyframes fadeInBody {
+    to { opacity: 1; }
+}
 
-    /* Landing section */
+/* Navbar (identical on both pages) */
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--dark-green);
+    padding: 10px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1000;
+}
+
+nav .nav-left a, nav .nav-links a {
+    text-decoration: none;
+    color: var(--light-green);
+    font-weight: normal;
+    margin-left: 15px;
+    transition: color var(--transition-speed);
+}
+
+nav .nav-left a {
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-left: 0;
+}
+
+nav .nav-links a:hover {
+    text-decoration: underline;
+}
+
+/* Landing section */
+.landing {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    width: 100%;
+    padding: 40px;
+    box-sizing: border-box;
+}
+
+.landing-text {
+    flex: 1;
+    max-width: 600px;
+    opacity: 0;
+    animation: fadeInText 1.5s ease forwards;
+}
+
+.landing-text p {
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+.landing-text h1 {
+    font-size: 3.5rem;
+    margin-top: 10px;
+    font-family: "Palatino", "Palatino Linotype", "Book Antiqua", serif;
+    font-weight: 900;
+}
+
+.landing-image {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(50px);
+    opacity: 0;
+    animation: slideInImage 1.5s ease forwards;
+    animation-delay: 0.5s;
+}
+
+.landing-image img {
+    max-width: 300px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(0,0,0,0.4);
+}
+
+/* Sections */
+section {
+    padding: 80px 20px;
+    max-width: 900px;
+    margin: auto;
+    width: 100%;
+}
+
+#about, #contact {
+    background-color: var(--light-green);
+    color: var(--dark-green);
+}
+
+h2 {
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+}
+
+.contact-info p {
+    margin: 5px 0;
+    font-size: 1.1rem;
+}
+
+/* Animations for landing */
+@keyframes fadeInText {
+    to { opacity: 1; }
+}
+@keyframes slideInImage {
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
     .landing {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-        background-color: var(--dark-green);
-        padding: 40px;
-        box-sizing: border-box;
-        color: white;
+        flex-direction: column;
+        text-align: center;
     }
     .landing-text {
-        flex: 1;
-        max-width: 600px;
-        opacity: 0;
-        animation: fadeIn 1.5s ease forwards;
+        margin-bottom: 20px;
     }
-    .landing-text p {
-        font-size: 1.5rem;
-        margin: 0;
-        font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-    }
-    .landing-text h1 {
-        font-size: 3.5rem;
-        margin-top: 10px;
-        font-family: "Palatino", "Palatino Linotype", "Book Antiqua", serif;
-        font-weight: 900;
-    }
-    .landing-image {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transform: translateX(50px);
-        opacity: 0;
-        animation: slideIn 1.5s ease forwards;
-        animation-delay: 0.5s;
-    }
-    .landing-image img {
-        max-width: 300px;
-        border-radius: 10px;
-        box-shadow: 0px 4px 15px rgba(0,0,0,0.4);
-    }
-
-    /* Sections */
-    section {
-        padding: 80px 20px;
-        max-width: 900px;
-        margin: auto;
-    }
-    #about, #contact {
-        background-color: var(--light-green);
-    }
-    h2 {
-        font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-    }
-
-    /* Contact section */
-    .contact-info p {
-        margin: 5px 0;
-        font-size: 1.1rem;
-    }
-
-    /* Animations */
-    @keyframes fadeIn {
-        to { opacity: 1; }
-    }
-    @keyframes slideIn {
-        to {
-            transform: translateX(0);
-            opacity: 1;
-        }
-    }
-
-    /* Mobile responsiveness */
-    @media (max-width: 768px) {
-        .landing {
-            flex-direction: column;
-            text-align: center;
-        }
-        .landing-text {
-            margin-bottom: 20px;
-        }
-    }
+}
 </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav id="navbar">
+<nav>
     <div class="nav-left"><a href="#top">Toby Berner</a></div>
     <div class="nav-links">
         <a href="portfolio.html">Portfolio</a>
@@ -184,18 +189,6 @@
         <p>Location: Boston, MA</p>
     </div>
 </section>
-
-<script>
-    // Navbar scroll effect
-    window.addEventListener('scroll', function() {
-        const navbar = document.getElementById('navbar');
-        if (window.scrollY > 50) {
-            navbar.classList.add('scrolled');
-        } else {
-            navbar.classList.remove('scrolled');
-        }
-    });
-</script>
 
 </body>
 </html>
