--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
 :root {
-    --dark-green: #013220; /* Dark Aston Martin green */
-    --light-green: #cfe5d2; /* Complementary lighter green */
+    --dark-green: #013220; 
+    --light-green: #cfe5d2; 
     --transition-speed: 0.3s;
 }
 
@@ -22,19 +22,16 @@ body {
     animation: fadeInBody 0.7s forwards;
 }
 
-/* Fade-in animation */
-@keyframes fadeInBody {
-    to { opacity: 1; }
-}
+@keyframes fadeInBody { to { opacity: 1; } }
 
-/* Navbar (identical on both pages) */
+/* Navbar */
 nav {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background-color: var(--dark-green);
-    padding: 10px 30px;
+    padding: 15px 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -45,18 +42,31 @@ nav .nav-left a, nav .nav-links a {
     text-decoration: none;
     color: var(--light-green);
     font-weight: normal;
-    margin-left: 15px;
+    margin-left: 25px;
+    font-size: 1.3rem;
+    position: relative;
     transition: color var(--transition-speed);
 }
 
 nav .nav-left a {
     font-weight: bold;
-    font-size: 1.2rem;
     margin-left: 0;
+    font-size: 1.6rem;
 }
 
-nav .nav-links a:hover {
-    text-decoration: underline;
+nav .nav-links a::after {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    bottom: -3px;
+    left: 0;
+    background-color: var(--light-green);
+    transition: width 0.3s ease;
+}
+
+nav .nav-links a:hover::after {
+    width: 100%;
 }
 
 /* Landing section */
@@ -66,24 +76,24 @@ nav .nav-links a:hover {
     justify-content: center;
     min-height: 100vh;
     width: 100%;
-    padding: 40px;
+    padding: 60px;
     box-sizing: border-box;
 }
 
 .landing-text {
     flex: 1;
-    max-width: 600px;
+    max-width: 700px;
     opacity: 0;
     animation: fadeInText 1.5s ease forwards;
 }
 
 .landing-text p {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin: 0;
 }
 
 .landing-text h1 {
-    font-size: 3.5rem;
+    font-size: 5rem;
     margin-top: 10px;
     font-family: "Palatino", "Palatino Linotype", "Book Antiqua", serif;
     font-weight: 900;
@@ -101,53 +111,45 @@ nav .nav-links a:hover {
 }
 
 .landing-image img {
-    max-width: 300px;
+    max-width: 350px;
     border-radius: 10px;
     box-shadow: 0px 4px 15px rgba(0,0,0,0.4);
 }
 
 /* Sections */
 section {
-    padding: 80px 20px;
-    max-width: 900px;
-    margin: auto;
+    padding: 100px 20px;
+    max-width: 100%;
+    box-sizing: border-box;
     width: 100%;
 }
 
 #about, #contact {
     background-color: var(--light-green);
     color: var(--dark-green);
+    width: 100%;
 }
 
 h2 {
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    font-size: 3rem;
+    margin-bottom: 20px;
 }
 
-.contact-info p {
-    margin: 5px 0;
-    font-size: 1.1rem;
+#about p, .contact-info p {
+    font-size: 1.8rem;
+    line-height: 1.6;
 }
 
 /* Animations for landing */
-@keyframes fadeInText {
-    to { opacity: 1; }
-}
-@keyframes slideInImage {
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
+@keyframes fadeInText { to { opacity: 1; } }
+@keyframes slideInImage { to { transform: translateX(0); opacity: 1; } }
 
-/* Mobile responsiveness */
 @media (max-width: 768px) {
-    .landing {
-        flex-direction: column;
-        text-align: center;
-    }
-    .landing-text {
-        margin-bottom: 20px;
-    }
+    .landing { flex-direction: column; text-align: center; }
+    .landing-text { margin-bottom: 30px; }
+    .landing-text p { font-size: 1.8rem; }
+    .landing-text h1 { font-size: 4rem; }
 }
 </style>
 </head>
