--- a/index.html
+++ b/index.html
@@ -31,27 +31,26 @@ nav {
     left: 0;
     width: 100%;
     background-color: var(--dark-green);
-    padding: 15px 40px;
+    padding: 10px 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
 }
 
-nav .nav-left a, nav .nav-links a {
+nav .nav-left a {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: var(--light-green);
+}
+
+nav .nav-links a {
     text-decoration: none;
     color: var(--light-green);
     font-weight: normal;
-    margin-left: 25px;
-    font-size: 1.3rem;
+    margin-left: 10px; /* Shifted left slightly */
     position: relative;
-    transition: color var(--transition-speed);
-}
-
-nav .nav-left a {
-    font-weight: bold;
-    margin-left: 0;
-    font-size: 1.6rem;
 }
 
 nav .nav-links a::after {
@@ -76,24 +75,24 @@ nav .nav-links a:hover::after {
     justify-content: center;
     min-height: 100vh;
     width: 100%;
-    padding: 60px;
+    padding: 40px;
     box-sizing: border-box;
 }
 
 .landing-text {
     flex: 1;
-    max-width: 700px;
+    max-width: 600px;
     opacity: 0;
     animation: fadeInText 1.5s ease forwards;
 }
 
 .landing-text p {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0;
 }
 
 .landing-text h1 {
-    font-size: 5rem;
+    font-size: 3.5rem;
     margin-top: 10px;
     font-family: "Palatino", "Palatino Linotype", "Book Antiqua", serif;
     font-weight: 900;
@@ -111,17 +110,19 @@ nav .nav-links a:hover::after {
 }
 
 .landing-image img {
-    max-width: 350px;
+    max-width: 300px;
     border-radius: 10px;
     box-shadow: 0px 4px 15px rgba(0,0,0,0.4);
 }
 
 /* Sections */
 section {
-    padding: 100px 20px;
-    max-width: 100%;
-    box-sizing: border-box;
+    padding: 80px 20px;
+    max-width: 900px;
+    margin: auto;
     width: 100%;
+    box-sizing: border-box;
+    text-align: center; /* Center content */
 }
 
 #about, #contact {
@@ -132,12 +133,12 @@ section {
 
 h2 {
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-    font-size: 3rem;
+    font-size: 2rem; /* original size */
     margin-bottom: 20px;
 }
 
 #about p, .contact-info p {
-    font-size: 1.8rem;
+    font-size: 1.2rem; /* original size */
     line-height: 1.6;
 }
 
@@ -147,9 +148,7 @@ h2 {
 
 @media (max-width: 768px) {
     .landing { flex-direction: column; text-align: center; }
-    .landing-text { margin-bottom: 30px; }
-    .landing-text p { font-size: 1.8rem; }
-    .landing-text h1 { font-size: 4rem; }
+    .landing-text { margin-bottom: 20px; }
 }
 </style>
 </head>
@@ -188,7 +187,6 @@ h2 {
     <div class="contact-info">
         <p>Email: toby.berner@example.com</p>
         <p>Phone: (123) 456-7890</p>
-        <p>Location: Boston, MA</p>
     </div>
 </section>
 
