--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
     scroll-behavior: smooth;
     background-color: var(--dark-green);
     color: var(--light-green);
-    opacity: 0; 
+    opacity: 0;
     animation: fadeInBody 0.7s forwards;
 }
 
@@ -49,7 +49,7 @@ nav .nav-links a {
     text-decoration: none;
     color: var(--light-green);
     font-weight: normal;
-    margin-left: 10px; /* Shifted left slightly */
+    margin-left: 10px; /* shifted left */
     position: relative;
 }
 
@@ -68,29 +68,42 @@ nav .nav-links a:hover::after {
     width: 100%;
 }
 
+/* Full-page sections */
+section {
+    min-height: 100vh; /* full viewport height */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    text-align: center;
+    width: 100%;
+    padding: 40px 20px;
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 1s ease, transform 1s ease;
+}
+
+section.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 /* Landing section */
 .landing {
-    display: flex;
-    align-items: center;
+    background-color: var(--dark-green);
+    color: var(--light-green);
+    flex-direction: row;
     justify-content: center;
-    min-height: 100vh;
-    width: 100%;
-    padding: 40px;
-    box-sizing: border-box;
+    align-items: center;
+    display: flex;
 }
 
 .landing-text {
-    flex: 1;
     max-width: 600px;
-    opacity: 0;
-    animation: fadeInText 1.5s ease forwards;
 }
 
-.landing-text p {
-    font-size: 1.5rem;
-    margin: 0;
-}
-
+.landing-text p { font-size: 1.5rem; margin: 0; }
 .landing-text h1 {
     font-size: 3.5rem;
     margin-top: 10px;
@@ -99,14 +112,7 @@ nav .nav-links a:hover::after {
 }
 
 .landing-image {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: translateX(50px);
-    opacity: 0;
-    animation: slideInImage 1.5s ease forwards;
-    animation-delay: 0.5s;
+    margin-left: 40px;
 }
 
 .landing-image img {
@@ -115,46 +121,30 @@ nav .nav-links a:hover::after {
     box-shadow: 0px 4px 15px rgba(0,0,0,0.4);
 }
 
-/* Sections */
-section {
-    padding: 80px 20px;
-    max-width: 900px;
-    margin: auto;
-    width: 100%;
-    box-sizing: border-box;
-    text-align: center; /* Center content */
-}
-
+/* About and Contact sections */
 #about, #contact {
     background-color: var(--light-green);
     color: var(--dark-green);
-    width: 100%;
+    width: 100%; /* span full width */
+    padding: 60px 20px;
 }
 
-h2 {
-    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-    font-size: 2rem; /* original size */
-    margin-bottom: 20px;
-}
+h2 { font-size: 2rem; margin-bottom: 20px; }
+#about p, .contact-info p { font-size: 1.2rem; line-height: 1.6; }
 
-#about p, .contact-info p {
-    font-size: 1.2rem; /* original size */
-    line-height: 1.6;
-}
-
-/* Animations for landing */
-@keyframes fadeInText { to { opacity: 1; } }
-@keyframes slideInImage { to { transform: translateX(0); opacity: 1; } }
-
+/* Mobile adjustments */
 @media (max-width: 768px) {
-    .landing { flex-direction: column; text-align: center; }
-    .landing-text { margin-bottom: 20px; }
+    .landing { flex-direction: column; }
+    .landing-text { margin-bottom: 30px; }
+    .landing-text p { font-size: 1.5rem; }
+    .landing-text h1 { font-size: 3rem; }
 }
+
+/* Scroll animation handled in JS */
 </style>
 </head>
 <body>
 
-<!-- Navbar -->
 <nav>
     <div class="nav-left"><a href="#top">Toby Berner</a></div>
     <div class="nav-links">
@@ -165,7 +155,7 @@ h2 {
 </nav>
 
 <!-- Landing Section -->
-<section id="top" class="landing">
+<section id="top" class="landing active">
     <div class="landing-text">
         <p>Hi, my name is</p>
         <h1>Toby Berner</h1>
@@ -189,6 +179,24 @@ h2 {
         <p>Phone: (123) 456-7890</p>
     </div>
 </section>
+
+<script>
+// Scroll-triggered fade-in for sections
+const sections = document.querySelectorAll('section');
+const observerOptions = {
+    threshold: 0.1
+};
+const observer = new IntersectionObserver((entries, observer) => {
+    entries.forEach(entry => {
+        if(entry.isIntersecting){
+            entry.target.classList.add('active');
+            observer.unobserve(entry.target);
+        }
+    });
+}, observerOptions);
+
+sections.forEach(section => { observer.observe(section); });
+</script>
 
 </body>
 </html>
