--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 :root {
     --dark-green: #013220; 
     --light-green: #cfe5d2; 
-    --transition-speed: 0.3s;
+    --transition-speed: 0.6s;
 }
 
 body {
@@ -20,83 +20,19 @@ body {
     color: var(--light-green);
 }
 
-/* Navbar parent */
-.nav-parent {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    background-color: var(--dark-green);
-}
-
-/* Navbar row */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 30px;
-    box-sizing: border-box;
-}
-
-/* Menu left and right */
-.menu-left, .menu-right {
-    display: flex;
-    align-items: center;
-}
-
-.menu-btn {
-    margin-left: 20px;
-}
-
+/* Navbar */
+.nav-parent { position: fixed; top: 0; width: 100%; z-index: 1000; background-color: var(--dark-green); }
+.navbar { display: flex; justify-content: space-between; align-items: center; padding: 10px 30px; box-sizing: border-box; }
+.menu-left, .menu-right { display: flex; align-items: center; }
+.menu-btn { margin-left: 20px; }
 .menu-left .menu-btn { margin-left: 0; }
-
-/* Links styling with underline animation */
-.button-underline-animation {
-    text-decoration: none;
-    color: var(--light-green);
-    font-weight: normal;
-    position: relative;
-    transition: color var(--transition-speed);
-}
-
-.menu-left .button-underline-animation {
-    font-weight: bold;
-    font-size: 1.2rem;
-}
-
-/* Underline animation */
-.button-underline-animation::after {
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    bottom: -3px;
-    left: 0;
-    background-color: var(--light-green);
-    transition: width 0.3s ease;
-}
-
-.button-underline-animation:hover::after {
-    width: 100%;
-}
-
-/* Responsive hamburger menu */
-#navbar-responsive {
-    display: none;
-    cursor: pointer;
-}
-
-#dropdown-navbar {
-    display: none;
-    flex-direction: column;
-    background-color: var(--dark-green);
-    width: 100%;
-}
-
-#dropdown-navbar a {
-    padding: 10px 20px;
-    border-top: 1px solid var(--light-green);
-}
+.button-underline-animation { text-decoration: none; color: var(--light-green); position: relative; transition: color var(--transition-speed); }
+.menu-left .button-underline-animation { font-weight: bold; font-size: 1.2rem; }
+.button-underline-animation::after { content: ''; position: absolute; width: 0%; height: 2px; bottom: -3px; left: 0; background-color: var(--light-green); transition: width 0.3s ease; }
+.button-underline-animation:hover::after { width: 100%; }
+#navbar-responsive { display: none; cursor: pointer; }
+#dropdown-navbar { display: none; flex-direction: column; background-color: var(--dark-green); width: 100%; }
+#dropdown-navbar a { padding: 10px 20px; border-top: 1px solid var(--light-green); }
 
 /* Full-page sections */
 section {
@@ -111,12 +47,18 @@ section {
     box-sizing: border-box;
     opacity: 0;
     transform: translateY(30px);
-    transition: opacity 1s ease, transform 1s ease;
+    transition: opacity 1s ease, transform 1s ease, background-color var(--transition-speed);
+    background-color: var(--dark-green);
 }
 
 section.active {
     opacity: 1;
     transform: translateY(0);
+}
+
+section.light-background {
+    background-color: var(--light-green);
+    color: var(--dark-green);
 }
 
 /* Landing section */
@@ -128,7 +70,7 @@ section.active {
 .landing-image img { max-width: 300px; border-radius: 10px; box-shadow: 0px 4px 15px rgba(0,0,0,0.4); }
 
 /* About & Contact sections */
-#about, #contact { background-color: var(--light-green); color: var(--dark-green); width: 100%; padding: 60px 20px; }
+#about, #contact { width: 100%; padding: 60px 20px; }
 h2 { font-size: 2rem; margin-bottom: 20px; }
 #about p, .contact-info p { font-size: 1.2rem; line-height: 1.6; }
 
@@ -169,7 +111,7 @@ h2 { font-size: 2rem; margin-bottom: 20px; }
   <div class="menu-btn"><a href="#contact" class="button-underline-animation" onclick="toggleDropdown()">Contact</a></div>
 </div>
 
-<!-- Landing Section -->
+<!-- Sections -->
 <section id="top" class="landing active">
   <div class="landing-text">
     <p>Hi, my name is</p>
@@ -180,13 +122,11 @@ h2 { font-size: 2rem; margin-bottom: 20px; }
   </div>
 </section>
 
-<!-- About Section -->
 <section id="about">
   <h2>About Me</h2>
   <p>I’m a Master’s student at the University of Pennsylvania School of Engineering and Applied Science, pursuing mechanical engineering. I recently graduated from Haverford College with a bachelor’s degree in physics and a minor in fine arts. I am actively seeking full-time mechanical engineering positions following my graduation in spring 2026.</p>
 </section>
 
-<!-- Contact Section -->
 <section id="contact">
   <h2>Contact</h2>
   <div class="contact-info">
@@ -196,17 +136,20 @@ h2 { font-size: 2rem; margin-bottom: 20px; }
 </section>
 
 <script>
-// Scroll-triggered fade-in for sections
+// Scroll-triggered fade-in and background toggle
 const sections = document.querySelectorAll('section');
-const observerOptions = { threshold: 0.1 };
-const observer = new IntersectionObserver((entries, observer) => {
+
+const observerOptions = { threshold: 0.3 };
+const observer = new IntersectionObserver((entries) => {
   entries.forEach(entry => {
     if(entry.isIntersecting){
-      entry.target.classList.add('active');
-      observer.unobserve(entry.target);
+      entry.target.classList.add('active', 'light-background');
+    } else {
+      entry.target.classList.remove('light-background');
     }
   });
 }, observerOptions);
+
 sections.forEach(section => observer.observe(section));
 
 // Toggle dropdown menu for mobile
