--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ h2 { font-size: 2rem; margin-bottom: 20px; }
 <section id="contact">
   <h2>Contact</h2>
   <div class="contact-info">
-    <p>Email: toby.berner@example.com</p>
-    <p>Phone: (123) 456-7890</p>
+    <p>Email: tdberner@hotmail.com</p>
+    <p>Phone: (203) 470-4758</p>
   </div>
 </section>
 
